This is a form in week 3

--- a/reg.html
+++ b/reg.html
@@ -9,7 +9,11 @@
   </head>
   <body>
     <section class="sec0">
-      <div class="sec0-div"><h1>THE REGISTRATION FORM</h1></div>
+      <div class="overlay">
+        <div class="sec0-div">
+          <h1>THE REGISTRATION FORM</h1>
+        </div>
+      </div>
     </section>
 
     <section class="sec0-1">
